--- a/CFU_Op1-Pipeline-Day0.Rmd
+++ b/CFU_Op1-Pipeline-Day0.Rmd
@@ -63,7 +63,7 @@ library(ggpubr)
 
 ```{r}
 #Replace w/ path to CFU sheet
-path <- c("/Volumes/rstor-henao_lab/Pablo/CFU_Pipeline/IMPAcTB_Lung_Option1/IMPACTB_CFU_Op1_AllDays_Lung.xlsx")
+path <- c("/Volumes/rstor-henao_lab/Pablo/CFU_Pipeline/IMPAcTB_Lung_Option1/IMPAcTB_Op1_Aerosol_CFU.xlsx")
 
 
 sheet_names <- excel_sheets(path)
@@ -125,12 +125,6 @@ all_data %>%
 all_data <- all_data %>%
   filter(CFUs != "TNTC")
 
-all_data$group = factor(all_data$group, levels = c("Saline", "BCG", "ID93", "BCG+ID93"))
-
-all_data <- all_data %>%
-  mutate(group = recode(group,
-                         "ID93" = "ID93+GLA-SE",
-                         "BCG+ID93" = "BCG-ID93+GLA-SE"))
 head(all_data)
 
 ```
@@ -147,26 +141,14 @@ level in the data:
 
 
 ```{r}
-#choose max cfu in each sample
-
-
-# tidy_cfu_data <- all_data %>%
-#   mutate(dilution = str_extract(dilution, "[0-9]+"),
-#          dilution = as.numeric(dilution)) %>%
-#   mutate(CFUs = as.numeric(CFUs)) %>%
-#   filter(CFUs >= 2, CFUs <= 200) %>%
-#   group_by(group, mouse, organ, sex) %>%
-#   slice_max(CFUs) %>%
-#   ungroup()
-
 
 tidy_cfu_data <- all_data %>%
   mutate(dilution = str_extract(dilution, "[0-9]+"),
          dilution = as.numeric(dilution)) %>%
   mutate(CFUs = as.numeric(CFUs)) %>%
-  filter(CFUs >= 1, CFUs <= 100) %>%
-  group_by(group, mouse, organ, sex, day) %>%
-  slice(which.min(ifelse(CFUs >= 1 & CFUs <= 100, dilution, Inf))) %>%
+  filter(CFUs >= 10, CFUs <= 400) %>%
+  group_by(group, mouse, organ, sex) %>%
+  slice(which.min(ifelse(CFUs >= 10 & CFUs <= 400, dilution, Inf))) %>%
   ungroup()
 
 tidy_cfu_data
@@ -179,24 +161,17 @@ tidy_cfu_data
 
 meta <- read_excel(path, sheet = "metadata")
 
-lungoption1tidy_cfu_meta_joined  <- inner_join(meta, tidy_cfu_data) %>%
+Day0option1tidy_cfu_meta_joined  <- inner_join(meta, tidy_cfu_data) %>%
   group_by(group) %>% 
-  mutate(CFUs_whole = ((CFUs * dilution_factor^dilution/volume_plated_ml) * total_resuspension_mL)/.50) %>%
-  dplyr::select(organ, count_date, day, who_plated, who_counted, group, sex, mouse, dilution, 
+  mutate(CFUs_whole = ((CFUs * dilution_factor^dilution/volume_plated_ml) * total_resuspension_mL)/1.0) %>%
+  dplyr::select(organ, count_date, who_plated, who_counted, group, day, sex, mouse, dilution, 
          CFUs, CFUs_whole) %>% 
   ungroup()
 
-# tidy_cfu_meta_joined  <- tidy_cfu_meta_joined %>%
-#   filter(!(mouse == "D" & group == "BCG + SolaVAX-IM-CpG1018 + SolaVAX-IN-CPG1018"))
-# 
-# tidy_cfu_meta_joined  <- tidy_cfu_meta_joined %>%
-#   filter(!(mouse == "B" & group == "BCG 1x"))
+Day0option1tidy_cfu_meta_joined 
 
-lungoption1tidy_cfu_meta_joined 
+write.csv(Day0option1tidy_cfu_meta_joined, "Day0option1tidy_cfu_meta_joined.csv", row.names = FALSE)
 
-write.csv(lungoption1tidy_cfu_meta_joined, "lungoption1tidy_cfu_meta_joined.csv", row.names = FALSE)
-
-lungoption1tidy_cfu_meta_joined
 ```
 
 
@@ -208,8 +183,8 @@ meta <- read_excel(path, sheet = "metadata")
 
 tidy_cfu_meta_joined <- inner_join(meta, tidy_cfu_data) %>%
   group_by(group) %>% 
-  mutate(CFUs_whole = ((CFUs * dilution_factor^dilution/volume_plated_ml) * total_resuspension_mL)/.33) %>%
-  dplyr::select(organ, count_date, who_plated, who_counted, group,  mouse, day, dilution, sex, 
+  mutate(CFUs_whole = ((CFUs * dilution_factor^dilution/volume_plated_ml) * total_resuspension_mL)/1.0) %>%
+  dplyr::select(organ, count_date, who_plated, who_counted, group, day, mouse, dilution, sex, 
          CFUs, CFUs_whole) %>% 
   ungroup()
 
@@ -219,260 +194,11 @@ tidy_cfu_meta_joined
 ```
 
 
-```{r}
-#USE FOR INDIVIDUAL DAYS
-female_df <- tidy_cfu_meta_joined %>%
-  filter(sex == "female" & day == "14")
-
-male_df <- tidy_cfu_meta_joined %>%
-  filter(sex == "male" & day == "14")
-
-# FEMALE ANOVA
-female_anova_result <- aov(log10(CFUs_whole) ~ group, data = female_df)
-
-# Extract p-values from ANOVA
-female_p_values <- summary(female_anova_result)[["Pr(>F)"]]
-
-# Perform Tukey's post hoc test for group comparisons
-female_tukey_result <- TukeyHSD(female_anova_result)
-
-# Extract p-values from Tukey's test
-female_p_values <- female_tukey_result[[1]][, "p adj"]
-
-# Specify the pairs of groups for significance bars
-female_significant_comparisons <- female_p_values < 0.05  # Example: using a significance level of 0.05
-female_significant_comparisons
-
-# MALE ANOVA
-male_anova_result <- aov(log10(CFUs_whole) ~ group, data = male_df)
-
-# Extract p-values from ANOVA
-male_p_values <- summary(male_anova_result)[["Pr(>F)"]]
-
-# Perform Tukey's post hoc test for group comparisons
-male_tukey_result <- TukeyHSD(male_anova_result)
-
-# Extract p-values from Tukey's test
-male_p_values <- male_tukey_result[[1]][, "p adj"]
-
-
-# Specify the pairs of groups for significance bars
-male_significant_comparisons <- male_p_values < 0.05  # Example: using a significance level of 0.05
-male_significant_comparisons
-
-```
-
-```{r}
-#USE FOR INDIVIDUAL DAYS
-female_df <- tidy_cfu_meta_joined %>%
-  filter(sex == "female" & day == "56")
-
-male_df <- tidy_cfu_meta_joined %>%
-  filter(sex == "male" & day == "56")
-
-# FEMALE ANOVA
-female_anova_result <- aov(log10(CFUs_whole) ~ group, data = female_df)
-
-# Extract p-values from ANOVA
-female_p_values <- summary(female_anova_result)[["Pr(>F)"]]
-
-# Perform Tukey's post hoc test for group comparisons
-female_tukey_result <- TukeyHSD(female_anova_result)
-
-# Extract p-values from Tukey's test
-female_p_values <- female_tukey_result[[1]][, "p adj"]
-
-# Specify the pairs of groups for significance bars
-female_significant_comparisons <- female_p_values < 0.05  # Example: using a significance level of 0.05
-female_significant_comparisons
-
-# MALE ANOVA
-male_anova_result <- aov(log10(CFUs_whole) ~ group, data = male_df)
-
-# Extract p-values from ANOVA
-male_p_values <- summary(male_anova_result)[["Pr(>F)"]]
-
-# Perform Tukey's post hoc test for group comparisons
-male_tukey_result <- TukeyHSD(male_anova_result)
-
-# Extract p-values from Tukey's test
-male_p_values <- male_tukey_result[[1]][, "p adj"]
-
-
-# Specify the pairs of groups for significance bars
-male_significant_comparisons <- male_p_values < 0.05  # Example: using a significance level of 0.05
-male_significant_comparisons
-
-```
-
-```{r}
-#USE FOR INDIVIDUAL DAYS
-female_df <- tidy_cfu_meta_joined %>%
-  filter(sex == "female" & day == "90")
-
-male_df <- tidy_cfu_meta_joined %>%
-  filter(sex == "male" & day == "90")
-
-# FEMALE ANOVA
-female_anova_result <- aov(log10(CFUs_whole) ~ group, data = female_df)
-
-# Extract p-values from ANOVA
-female_p_values <- summary(female_anova_result)[["Pr(>F)"]]
-
-# Perform Tukey's post hoc test for group comparisons
-female_tukey_result <- TukeyHSD(female_anova_result)
-
-# Extract p-values from Tukey's test
-female_p_values <- female_tukey_result[[1]][, "p adj"]
-
-# Specify the pairs of groups for significance bars
-female_significant_comparisons <- female_p_values < 0.05  # Example: using a significance level of 0.05
-female_significant_comparisons
-
-# MALE ANOVA
-male_anova_result <- aov(log10(CFUs_whole) ~ group, data = male_df)
-
-# Extract p-values from ANOVA
-male_p_values <- summary(male_anova_result)[["Pr(>F)"]]
-
-# Perform Tukey's post hoc test for group comparisons
-male_tukey_result <- TukeyHSD(male_anova_result)
-
-# Extract p-values from Tukey's test
-male_p_values <- male_tukey_result[[1]][, "p adj"]
-
-
-# Specify the pairs of groups for significance bars
-male_significant_comparisons <- male_p_values < 0.05  # Example: using a significance level of 0.05
-male_significant_comparisons
-```
-
-
-
-```{r}
-# USE FOR INDIVIDUAL DAYS
-# female_combined_df <- as.data.frame(female_p_values) %>%
-#   rownames_to_column("group") %>%
-#   left_join(as.data.frame(female_significant_comparisons) %>%
-#               rownames_to_column("group"), by = "group")
-# female_combined_df
-# 
-# male_combined_df <- as.data.frame(male_p_values) %>%
-#   rownames_to_column("group") %>%
-#   left_join(as.data.frame(male_significant_comparisons) %>%
-#               rownames_to_column("group"), by = "group")
-# male_combined_df
-# 
-# left_join(female_combined_df, male_combined_df, by = "group")
-```
-
-```{r}
-# Filter data for day 14
-df_day_14 <- tidy_cfu_meta_joined %>% 
-              filter(day == 14)
-
-# Separate by sex for day 14
-df_day_14_male <- df_day_14 %>% 
-                  filter(sex == "male")
-
-df_day_14_female <- df_day_14 %>% 
-                    filter(sex == "female")
-
-# Filter data for day 56
-df_day_56 <- tidy_cfu_meta_joined %>% 
-              filter(day == 56)
-
-# Separate by sex for day 56
-df_day_56_male <- df_day_56 %>% 
-                  filter(sex == "male")
-
-df_day_56_female <- df_day_56 %>% 
-                    filter(sex == "female")
-
-# Filter data for day 90
-df_day_90 <- tidy_cfu_meta_joined %>% 
-              filter(day == 90)
-
-# Separate by sex for day 90
-df_day_90_male <- df_day_90 %>% 
-                  filter(sex == "male")
-
-df_day_90_female <- df_day_90 %>% 
-                    filter(sex == "female")
-```
-
-```{r}
-# Day+sex T.test
-
-# Perform t-test between treatment and saline groups
-t_test_result <- t.test(log10(CFUs_whole) ~ group, data = df_day_14_male, subset = group %in% c("BCG", "Saline"))
-
-# Extract p-value from t-test result
-p_value_t_test <- t_test_result$p.value
-
-# Print the p-value
-print(p_value_t_test)
-
-# Perform t-test between treatment and saline groups
-t_test_result <- t.test(log10(CFUs_whole) ~ group, data = df_day_14_male, subset = group %in% c("ID93+GLA-SE", "Saline"))
-
-# Extract p-value from t-test result
-p_value_t_test <- t_test_result$p.value
-
-# Print the p-value
-print(p_value_t_test)
-
-# Perform t-test between treatment and saline groups
-t_test_result <- t.test(log10(CFUs_whole) ~ group, data = df_day_14_male, subset = group %in% c("BCG-ID93+GLA-SE", "Saline"))
-
-# Extract p-value from t-test result
-p_value_t_test <- t_test_result$p.value
-
-# Print the p-value
-print(p_value_t_test)
-```
-
-
-```{r}
-# Day T.test
-
-# Perform t-test between treatment and saline groups
-t_test_result <- t.test(log10(CFUs_whole) ~ group, data = df_day_56, subset = group %in% c("BCG", "Saline"))
-
-# Extract p-value from t-test result
-p_value_t_test <- t_test_result$p.value
-
-# Print the p-value
-print(p_value_t_test)
-
-# Perform t-test between treatment and saline groups
-t_test_result <- t.test(log10(CFUs_whole) ~ group, data = df_day_56, subset = group %in% c("ID93+GLA-SE", "Saline"))
-
-# Extract p-value from t-test result
-p_value_t_test <- t_test_result$p.value
-
-# Print the p-value
-print(p_value_t_test)
-
-# Perform t-test between treatment and saline groups
-t_test_result <- t.test(log10(CFUs_whole) ~ group, data = df_day_56, subset = group %in% c("BCG-ID93+GLA-SE", "Saline"))
-
-# Extract p-value from t-test result
-p_value_t_test <- t_test_result$p.value
-
-# Print the p-value
-print(p_value_t_test)
-
-```
-
-
-
 ```{r fig.width=5}
 ggplot(tidy_cfu_meta_joined, aes(x = day, y = log10(CFUs_whole), fill = group, color = group)) +
 geom_point(size = 5, shape = 21, alpha = 0.8, na.rm = T, colour = "black", 
            cex = 1.5, position = position_dodge(width = .75)) + 
   geom_boxplot(aes(fill = group), alpha = 0.3) + 
-  facet_wrap(~ sex) + 
   scale_fill_manual(values = c("red2", "olivedrab3", "green4",  "deepskyblue")) + 
   scale_color_manual(values = c("red2", "olivedrab3", "green4",  "deepskyblue")) +
   theme_bw() + 
@@ -492,33 +218,7 @@ geom_point(size = 5, shape = 21, alpha = 0.8, na.rm = T, colour = "black",
   theme(strip.text = element_text(size=16, face = "bold")) +
   labs (y="Log10 CFU") +
   ggtitle("Option 1 Lung CFU") +
-  ylim(4.5, 6.5)
-
-
-ggplot(tidy_cfu_meta_joined, aes(x = day, y = log10(CFUs_whole), fill = group, color = group)) +
-geom_point(size = 5, shape = 21, alpha = 0.8, na.rm = T, colour = "black", 
-           cex = 1.5, position = position_dodge(width = .75)) + 
-  geom_boxplot(aes(fill = group), alpha = 0.3) + 
-  scale_fill_manual(values = c("red2", "olivedrab3", "green4",  "deepskyblue")) + 
-  scale_color_manual(values = c("red2", "olivedrab3", "green4",  "deepskyblue")) +
-  theme_bw() + 
-  theme(
-        #axis.text.x = element_blank(), # Remove X-axis names
-        axis.title.x = element_blank(),   
-        axis.text.x = element_text(size = 12),
-        #axis.title.x = element_text(size = 12, face = "bold"),
-        #axis.text.y = element_blank(), # Remove axis names
-        #axis.title.y = element_blank(), 
-        axis.text.y = element_text(size = 12),
-        axis.title.y = element_text(size = 12, face = "bold"),
-        legend.text = element_text(size = 10), 
-        legend.title = element_text(size = 10), 
-        legend.key.size = unit(1, 'cm'), 
-        plot.title = element_text(color="black", size=16, face="bold")) + 
-  theme(strip.text = element_text(size=16, face = "bold")) +
-  labs (y="Log10 CFU") +
-  ggtitle("Option 1 Lung CFU") +
-  ylim(4.5, 6.5)
+  ylim(0, 4)
 ```
 
 
